feat: half of body

--- a/index.html
+++ b/index.html
@@ -3,9 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/common.css">
     <title>Responsive Layout</title>
 </head>
 <body>
-    
+    <header>
+        <!--------TOP BAR--------------->
+        <div class="nav-bar container">
+            <div class="left"><img src="img/logo.png" alt="logo"></div>
+            <div class="right">
+                <ul class="nav list">
+                    <li>Planning</li>
+                    <li>Testimoniala</li>
+                    <li>Features</li>
+                    <li>About us</li>
+                    <li>
+                        <button class="white button">Get Started</button>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </header>
+    <!--------JUMBOTRON--------------->
+    <div class="container jumbotron">
+        <div class="box wide">a</div>
+        <div class="box">b</div>
+        <div class="box">c</div>
+        <div class="box">d</div>
+        <div class="box">e</div>     
+    </div>
+    <div class="purple">
+        <div class="small-container">
+            <div class="col-small"></div>
+            <div class="col-small"></div>
+        </div>
+    </div>
 </body>
 </html>
