feat: structure done

--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!--------- LINKS STYLESHEET---------- -->
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/common.css">
+    <link rel="stylesheet" href="/css/typography.css">
+
+    <!--------- GOOGLE FONTS ---------------->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500&display=swap" rel="stylesheet">
+
     <title>Responsive Layout</title>
+
 </head>
 <body>
     <header>
@@ -25,19 +35,72 @@
             </div>
         </div>
     </header>
-    <!--------JUMBOTRON--------------->
-    <div class="container jumbotron">
-        <div class="box wide">a</div>
-        <div class="box">b</div>
-        <div class="box">c</div>
-        <div class="box">d</div>
-        <div class="box">e</div>     
-    </div>
-    <div class="purple">
-        <div class="small-container">
-            <div class="col-small"></div>
-            <div class="col-small"></div>
+    <main>
+        <!--------JUMBOTRON--------------->
+        <div class="container jumbotron">
+            <div class="box wide">a</div>
+            <div class="box">b</div>
+            <div class="box">c</div>
+            <div class="box">d</div>
+            <div class="box">e</div>     
         </div>
-    </div>
+        <div class="purple">
+        <!-- FIRST SECTION -->
+            <div class="small-container">
+                <div class="col-small"></div>
+                <div class="col-small"></div>
+            </div>
+        </div>        
+        <!-- SECOND SECTION -->
+        <div class="titles container">
+            <h5>Testimonials</h5>
+            <h2>We are committed experts partners</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo voluptatum cum provident mollitia officia maiores temporibus fugit, molestias, velit magnam culpa.</p>
+        </div>
+            <div class="column container">
+                <div class="uw-box"></div>
+                <div class="uw-box"></div>
+                <div class="uw-box"></div>
+            </div>
+       
+        <!-- THIRD SECTION -->
+        <div class="purple">
+            <div class="titles container">
+                <h3>Benefits of working with us</h3>
+            </div>
+            <div class="grid container">
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+            </div>
+        </div>
+        <!-- FOURTH SECTION -->
+        <div class="last container">
+            <div class="col-bigger">
+                <h4>About us</h4>
+                <p>Lorem ipsum dolor sit,  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores inventore doloremque perspiciatis ratione eos debitis cupiditate fugit omnis, non quae rerum enim culpa nulla quasi repellat ut corporis dolor libero. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos labore, officiis minus fugit amet unde incidunt optio neque possimus, quam ut obcaecati expedita? Totam, corrupti eum excepturi ipsum cupiditate sit!amet consectetur adipisicing elit. Provident beatae expedita porro? Esse itaque eaque fugiat dignissimos inventore veritatis dolor debitis, suscipit modi accusantium laborum excepturi porro. Cumque, cupiditate. Eligendi.</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint reiciendis, quaerat est fugiat facilis placeat, provident cupiditate aliquid laudantium veniam expedita dignissimos itaque quibusdam qui natus sapiente aliquam consectetur totam.</p>
+            </div>
+            <div class="col-smaller">
+                <div class="segnaposto"></div>
+                <div class="caption"></div>
+                <button class="violet"></button>
+            </div>
+        </div>
+    </main>
+    <!--  FOOTER  -->
+    <footer>
+        <div class="call-to-action">
+            <h6>get started</h6>
+            <h3>SIMPLE, TRANSPARENT PRICING</h3>
+            <strong>IT'S FREE!</strong>
+            <p>Lorem ipsum dolor sit amet pariatur magnam vitae veritatis numquam incidunt alias quasi repellat sequi at porro fugit sed natus eveniet nobis modi!</p>
+            <button class="white"></button>
+        </div>
+        <div class="footer"></div>
+    </footer>
 </body>
 </html>
