feat: mobile and tablet version mostly done

--- a/index.html
+++ b/index.html
@@ -40,33 +40,55 @@
     <main>
         <!--------JUMBOTRON--------------->
         <div class="container jumbotron">
-            <div class="box wide">
-                <div class="text">
-                    <h3>Get a demo application</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. aspernatur provident eaque alias, adipisci atque. Accusantium id blanditiis praesentium.</p>
-                    <button class="blue">
-                        <i class="fa-brands fa-apple"></i>
-                        App Store
-                    </button>
+                <div class="box wide">
+                    <div class="text">
+                        <h3>Get a demo application</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. aspernatur provident eaque alias, adipisci atque. Accusantium id blanditiis praesentium.</p>
+                        <button class="blue">
+                            <i class="fa-brands fa-apple"></i>
+                            App Store
+                        </button>
+                    </div>
+                    <div class="img-phone">
+                        <img src="img/phone.png" alt="phone" id="phone">
+                    </div>
                 </div>
-                <div class="img-phone">
-                    <img src="img/phone.png" alt="phone" id="phone">
+                <div class="box">
+                    <i class="fa-solid fa-file-code"></i>
+                    <h3>Clean code</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus possimus ut nam! consequatur culpa hic voluptas impedit repudiandae magnam, magni doloribus vel dignissimos!</p>
                 </div>
-            </div>
-            <div class="box">
-                <i class="fa-solid fa-file-code"></i>
-                <h2>Clean code</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus possimus ut nam! consequatur culpa hic voluptas impedit repudiandae magnam, magni doloribus vel dignissimos!</p>
-            </div>
-            <div class="box">c</div>
-            <div class="box">d</div>
-            <div class="box">e</div>     
+                <div class="box">
+                    <i class="fa-solid fa-compass-drafting"></i>
+                    <h3>Web design</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus possimus ut nam! consequatur culpa hic voluptas impedit repudiandae magnam, magni doloribus vel dignissimos!</p>
+                </div>
+                <div class="box">
+                    <i class="fa-solid fa-laptop-code"></i>
+                    <h3>Branding</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus possimus ut nam! consequatur culpa hic voluptas impedit repudiandae magnam, magni doloribus vel dignissimos!</p>
+                </div>
+                <div class="box">
+                    <i class="fa-solid  fa-bullhorn"></i>
+                    <h3>Developement</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus possimus ut nam! consequatur culpa hic voluptas impedit repudiandae magnam, magni doloribus vel dignissimos!</p>
+                </div>
         </div>
-        <div class="purple">
         <!-- FIRST SECTION -->
-            <div class="small-container">
-                <div class="col-small"></div>
-                <div class="col-small"></div>
+        <div class="purple">
+        
+            <div class="small container">
+                <div class="col-small">
+                    <img src="img/planning1.png" alt="planning1" id="plan-pic">
+                    <h4 class="planning">Strategic Planning</h4>
+                    <p class="planning">Lorem ipsum dolor sit amet consectetur adipisicing, cumque minima. Nostrum quasi cum explicabo accusantium eius aliquam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui quo est inventore, ratione praesentium libero ipsum sunt officia maiores rerum! Odio?</p>
+                </div>
+                <div class="col box ">
+                    <img src="img/planning2.png" alt="planning2" id="plan-pic">
+                    <h5>App Developement</h5>
+                    <p>Develop and on demand app Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, dignissimos. Labore, sunt libero vitae recusandae rerum maxime.</p>
+                    <div class="circle"><i class="fa-solid fa-arrow-down"></i></div>
+                </div>
             </div>
         </div>        
         <!-- SECOND SECTION -->
@@ -76,29 +98,80 @@
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo voluptatum cum provident mollitia officia maiores temporibus fugit, molestias, velit magnam culpa.</p>
         </div>
             <div class="column container">
-                <div class="uw-box"></div>
-                <div class="uw-box"></div>
-                <div class="uw-box"></div>
+                <div class="uw-box">
+                    <div class="circleimg">
+                        <img src="img/testimonial1.jpg" alt="testimonial1" id="testimonials">
+                    </div>
+                    <div class="description">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae, voluptatibus laborum. Consequuntur, alias molestiae autem error, doloremque totam odio corrupti reiciendis necessitatibus nam magnam illum laborum natus ex aspernatur amet?
+                    </div>
+                </div>
+                <div class="uw-box">
+                    <div class="circleimg">
+                        <img src="img/testimonial2.jpg" alt="testimonial2" id="testimonials">
+                    </div>
+                    <div class="description">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae, voluptatibus laborum. Consequuntur, alias molestiae autem error, doloremque totam odio corrupti reiciendis necessitatibus nam magnam illum laborum natus ex aspernatur amet?
+                    </div>
+                </div>
+                <div class="uw-box">
+                    <div class="circleimg">
+                        <img src="img/testimonial3.jpg" alt="testimonial3" id="testimonials">
+                    </div>
+                    <div class="description">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae, voluptatibus laborum. Consequuntur, alias molestiae autem error, doloremque totam odio corrupti reiciendis necessitatibus nam magnam illum laborum natus ex aspernatur amet?
+                    </div>
+                </div>
             </div>
        
         <!-- THIRD SECTION -->
         <div class="purple">
             <div class="titles container">
-                <h3>Benefits of working with us</h3>
+                <h3 class="benefits-title">Benefits of working with us</h3>
             </div>
             <div class="grid container">
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
-                <div class="square"></div>
+                <div class="square box">
+                    <div class="number">01</div>
+                    <div class="s-title">High Quality</div>
+                    <p class="s">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit aperiam maiores cupiditate esse. Illo quas minus qui sequi unde sit beatae excepturi distinctio vel dolore, dicta repellat vitae delectus consequuntur.</p>
+                    <button class="violet">more</button>
+                </div>
+                <div class="square box">
+                    <div class="number">02</div>
+                    <div class="s-title">Creative Team</div>
+                    <p class="s">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit aperiam maiores cupiditate esse. Illo quas minus qui sequi unde sit beatae excepturi distinctio vel dolore, dicta repellat vitae delectus consequuntur.</p>
+                    <button class="violet">more</button>
+                </div>
+                <div class="square box">
+                    <div class="number">03</div>
+                    <div class="s-title">Amazing Results</div>
+                    <p class="s">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit aperiam maiores cupiditate esse. Illo quas minus qui sequi unde sit beatae excepturi distinctio vel dolore, dicta repellat vitae delectus consequuntur.</p>
+                    <button class="violet">more</button>
+                </div>
+                <div class="square box">
+                    <div class="number">04</div>
+                    <div class="s-title">Innovations</div>
+                    <p class="s">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit aperiam maiores cupiditate esse. Illo quas minus qui sequi unde sit beatae excepturi distinctio vel dolore, dicta repellat vitae delectus consequuntur.</p>
+                    <button class="violet">more</button>
+                </div>
+                <div class="square box">
+                    <div class="number">05</div>
+                    <div class="s-title">Best Pricing</div>
+                    <p class="s">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit aperiam maiores cupiditate esse. Illo quas minus qui sequi unde sit beatae excepturi distinctio vel dolore, dicta repellat vitae delectus consequuntur.</p>
+                    <button class="violet">more</button>
+                </div>
+                <div class="square box">
+                    <div class="number">06</div>
+                    <div class="s-title">24/7 Support</div>
+                    <p class="s">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit aperiam maiores cupiditate esse. Illo quas minus qui sequi unde sit beatae excepturi distinctio vel dolore, dicta repellat vitae delectus consequuntur.</p>
+                    <button class="violet">more</button>
+                </div>
             </div>
         </div>
         <!-- FOURTH SECTION -->
         <div class="last container">
             <div class="col-bigger">
-                <h4>About us</h4>
+                <h4 class="about-us">About us</h4>
                 <p>Lorem ipsum dolor sit,  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores inventore doloremque perspiciatis ratione eos debitis cupiditate fugit omnis, non quae rerum enim culpa nulla quasi repellat ut corporis dolor libero. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos labore, officiis minus fugit amet unde incidunt optio neque possimus, quam ut obcaecati expedita? Totam, corrupti eum excepturi ipsum cupiditate sit!amet consectetur adipisicing elit. Provident beatae expedita porro? Esse itaque eaque fugiat dignissimos inventore veritatis dolor debitis, suscipit modi accusantium laborum excepturi porro. Cumque, cupiditate. Eligendi.</p>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint reiciendis, quaerat est fugiat facilis placeat, provident cupiditate aliquid laudantium veniam expedita dignissimos itaque quibusdam qui natus sapiente aliquam consectetur totam.</p>
             </div>
