--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </div>        
         <!-- SECOND SECTION -->
         <div class="titles container">
-            <h5>Testimonials</h5>
+            <h5>TESTIMONIALS</h5>
             <h2>We are committed experts partners</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo voluptatum cum provident mollitia officia maiores temporibus fugit, molestias, velit magnam culpa.</p>
         </div>
@@ -185,11 +185,13 @@
     <!--  FOOTER  -->
     <footer>
         <div class="call-to-action">
-            <h6>get started</h6>
-            <h3>SIMPLE, TRANSPARENT PRICING</h3>
-            <strong>IT'S FREE!</strong>
-            <p>Lorem ipsum dolor sit amet pariatur magnam vitae veritatis numquam incidunt alias quasi repellat sequi at porro fugit sed natus eveniet nobis modi!</p>
-            <button class="white"></button>
+            <h6 class="start">GET STARTED</h6>
+            <h3 class="simple">Simple, Transparent Pricing</h3>
+            <strong>It's Free!</strong>
+            <div class="free-text">
+                <p>Lorem ipsum dolor sit amet pariatur magnam vitae veritatis numquam incidunt alias quasi repellat sequi at porro fugit sed natus eveniet nobis modi!</p>
+            </div>            
+            <button class="white end"> Get started</button>
         </div>
         <div class="footer">
             <p class="ft">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente eos quisquam eligendi, aliquam vitae labore expedita earum numquam aliquid.</p>
